--- a/news/templates/all-news/today-news.html
+++ b/news/templates/all-news/today-news.html
@@ -1,26 +1,15 @@
-{%extends 'all-news/base.html'%}
-{% block content %} 
-{{ block.super}}
+{%extends 'all-news/base.html'%} 
+{% load bootstrap3 %}
+<!-- Some content here-->
 
-<div class="container">
+<!-- Looping through news end   -->
+<div class="container-fluid">
 
-  <!-- Looping through news   -->
-  {% for news_item in news %}
+  <form  action="{%url 'newsToday'%}" method="post">
+    {%csrf_token%}
 
-  <div class="row">
-    <!-- displaying News articles -->
-    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-      <h2 class="text-center"> {{ news_item.title }} </h2>
-    </div>
-
-  <!--Display news Article images  -->
-  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-    <a href='{% url "article" news_item.id %}'><img src="{{news_item.article_image.url}}" class="img-responsive" alt="Image"></a>
-  </div>
+    {% bootstrap_form letterForm layout='inline' %}
+    <input type="submit" value="Subscribe">
+  </form>
 
 </div>
-  {% endfor %}
-
-</div>
-
-{% endblock %}
